Minor tweak to prevent wrapping of narrow columns.

--- a/trunk/templates/calm/styles.css
+++ b/trunk/templates/calm/styles.css
@@ -788,7 +788,7 @@ div.blame-popup .date {
 
 #wrap td.age, #wrap td.date, #wrap td.rev {
 	text-align: right;
-	white-space: pre-wrap;
+	white-space: nowrap;
 }
 
 #wrap p.pagelinks > * {
